Azure portal から App Service デプロイのワークフロー構成を追加または更新します。

--- a/.github/workflows/master_Livestreaming-dev.yml
+++ b/.github/workflows/master_Livestreaming-dev.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Set up Node.js version
       uses: actions/setup-node@v1
       with:
-        node-version: '14.x'
+        node-version: '10.6.0'
 
     - name: npm install, build, and test
       run: |
@@ -32,5 +32,5 @@ jobs:
       with:
         app-name: 'Livestreaming-dev'
         slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_88f4a1d2ab5e4112bbb82580b24a3250 }}
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_3ea183ac2acf4cc7a4dcb2e93b8f5e4e }}
         package: .
