--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sample",
   "version": "0.0.1",
-  "main": "index.html",
+  "main": "test.php",
   "scripts": {
      "test": "echo \"No test specified\""
   },
