--- a/.github/workflows/master_livestreaming.yml
+++ b/.github/workflows/master_livestreaming.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js app to Azure Web App - livestreaming
+name: Build and deploy JAR app to Azure Web App - livestreaming
 
 on:
   push:
@@ -16,21 +16,18 @@ jobs:
     steps:
     - uses: actions/checkout@master
 
-    - name: Set up Node.js version
-      uses: actions/setup-node@v1
+    - name: Set up Java version
+      uses: actions/setup-java@v1
       with:
-        node-version: '14.x'
+        java-version: '11'
 
-    - name: npm install, build, and test
-      run: |
-        npm install
-        npm run build --if-present
-        npm run test --if-present
+    - name: Build with Maven
+      run: mvn clean install
 
-    - name: 'Deploy to Azure Web App'
+    - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
       with:
         app-name: 'livestreaming'
         slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_c0303a1a868a464da80c3e1a21b0883e }}
-        package: .
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_321ccfa6186c474f8f9e06686c4cefdd }}
+        package: '${{ github.workspace }}/target/*.jar'
