--- a/wp/web.config
+++ b/wp/web.config
@@ -3,7 +3,7 @@
   <system.webServer>
     <rewrite>
       <rules>
-			<rule name="WordPress: http://livestreaming-dev2.azurewebsites.net" patternSyntax="Wildcard">
+			<rule name="WordPress: http://livestreaming.azurewebsites.net" patternSyntax="Wildcard">
 				<match url="*"/>
 					<conditions>
 						<add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true"/>
