--- a/web.config
+++ b/web.config
@@ -10,7 +10,7 @@
         <rewrite>
             <rules>
                 <clear />
-                //<rule name="WordPress Rule" stopProcessing="true">
+                /**<rule name="WordPress Rule" stopProcessing="true">**/
 		<rule name="WordPress: http://livestreaming.azurewebsites.net" patternSyntax="Wildcard">
                     <match url=".*" />
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
