--- a/web.config
+++ b/web.config
@@ -10,13 +10,10 @@
         <rewrite>
             <rules>
                 <clear />
-                /**<rule name="WordPress Rule" stopProcessing="true">**/
-		<rule name="WordPress: http://livestreaming.azurewebsites.net" patternSyntax="Wildcard">
+		<rule name="WordPress: http://livestreaming.azurewebsites.net/wp" patternSyntax="Wildcard">
                     <match url=".*" />
-                    <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
                         <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
                         <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
-                    </conditions>
                     <action type="Rewrite" url="index.php" />
                 </rule>
             </rules>
